<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableRow>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/strTable" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prev"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btn07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_column="2"/>
    </TableRow>
</TableLayout>