<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <CheckBox
        android:id="@+id/chk01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/txt01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strRelative"
        android:layout_below="@+id/chk01"
        android:layout_alignParentLeft="true"
        />
    <Button
        android:id="@+id/btn08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_prev"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>
